<resources>
    <string name="app_name">ProBunker</string>
    <string name="addsubject">Add Subject</string>
    <string name="subject_name_textview">Subject Name</string>
    <string name="save">save</string>
    <string name="choose_a_color">Click on the button to choose a color</string>
    <string name="subject_name">Subject Name</string>
    <string name="name_edit_text">Name</string>
    <string name="total_text_view">Total</string>
    <string name="total_classes_edit_text">Total classes</string>
    <string name="bunked_text_view">Bunked</string>
    <string name="bucked_classes_edit_text">Bucked classes</string>
    <string name="click_here">Click here</string>
    <string name="app_logo">app logo</string>
    <string name="delete">D</string>
    <string name="plus_symbol">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="percentage">percent</string>
    <string name="report">Your report</string>
    <string name="charts">charts</string>
    <string name="total_percentage">Total percentage</string>
    <string name="your_attendance_analysis">Your Attendance Analysis</string>
    <string name="number_of_bunks_available_for">Number of safe bunks available</string>
    <string name="_75">75</string>
    <string name="change_above_value_for_percentage_values">change above value for percentage values</string>
    <string name="including_all_subjects">Including all subjects :</string>
    <string name="for_65">For 65%</string>
    <string name="number">number</string>
    <string name="for_75">For 75%</string>
    <string name="select_subject">Select a subject</string>
    <string name="about_us">About Us</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="share">Share</string>
    <string name="enter_the_minimum_percentage">Enter the minimum percentage required</string>
    <string name="calculate">Calculate</string>
    <string name="symbol">%</string>
    <string name="for_invidual_subjects">For individual subjects :</string>
    <string name="colorpicker">Copyright 2009-2015 Yuku \n
 Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at \n \n
     http://www.apache.org/licenses/LICENSE-2.0 \n
 \n Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="chart_license">Copyright {yyyy} {name of copyright owner}\n

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at\n \n

       http://www.apache.org/licenses/LICENSE-2.0\n \n

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>
    <string name="_name">Subject</string>
    <string name="ambilwarna_color_picker">AmbilWarna Color picker</string>
    <string name="chart_lib_name">MPAndroidChart</string>
    <string name="ss_developers">SS Developers</string>
    <string name="name_of_developer">App Developed By:</string>
    <string name="my_name">Bharath Chandra</string>
    <string name="my_link">linkedin.com/in/bharath-chandra-t-5b3a8183</string>
    <string name="for_any_suggestions_send_us_a_mail">For any suggestions send us a mail to </string>
    <string name="ssdevelopersindia2000_gmail_com">ssdevelopersindia2000@gmail.com</string>
    <array name="dot_colors">
        <item>#03A9F4</item>
        <item>#E65100</item>
        <item>#FFBB00</item>
    </array>
</resources>
