<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/open_charts"
        android:title="@string/charts"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/open_about"
        android:title="@string/about_us"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/open_licenses"
        android:title="@string/open_source_licenses"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item android:title="@string/share"
        android:id="@+id/share"
        android:orderInCategory="5"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom"/>
</menu>