<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include layout="@layout/toolbar_main"
        android:id="@+id/toolbar_about"/>
<android.support.v7.widget.AppCompatImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/ss1"
    android:layout_marginTop="30dp"
    android:layout_gravity="center_horizontal"
    android:elevation="10dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/ss_developers"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_developer"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/my_link"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textColor="#000"
        android:text="@string/for_any_suggestions_send_us_a_mail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/ssdevelopersindia2000_gmail_com"/>
</LinearLayout>
</ScrollView>