<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="166dp"
            android:layout_height="35dp"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/subject_name" />

        <TextView
            android:id="@+id/total_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="75dp"
            android:text="@string/total_text_view" />

        <TextView
            android:id="@+id/bunked_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/total_text_view"
            android:layout_marginBottom="46dp"
            android:text="@string/bunked_text_view" />

        <TextView
            android:id="@+id/total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/total_text_view"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/bunked_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bunked_text"
            android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>